# p256k1

./: BENCHMARK_RESULTS.md  CMakeLists.txt  FOUR_PHASES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MONTGOMERY_NOTES.md  Makefile  OPTIMIZATION_SUMMARY.md  PACKAGE_RESTRUCTURE_SUMMARY.md  PHASE1_SUMMARY.md  PHASE1_VALIDATION_REPORT.md  README.md  README_p256k1.md  TEST_SUITE_SUMMARY.md  VERIFICATION_PERFORMANCE_ANALYSIS.md  VERIFY_OPTIMIZATION_ANALYSIS.md  benchmark_results.txt  context.go  context_test.go  ecdh.go  ecdh_test.go  ecdsa.go  ecdsa_bench_test.go  ecdsa_test.go  eckey.go  eckey_test.go  ecmult_comprehensive_test.go  ecmult_gen.go  extrakeys.go  extrakeys_test.go  field.go  field_mul.go  field_test.go  glv.go  glv_test.go  go.mod  go.sum  group.go  group_test.go  hash.go  hash_test.go  (+14 more)
bench/: BENCHMARK_REPORT.md  BENCHMARK_REPORT_OLD.md  comparison_bench_test.go
btcec-signer/: go.mod
examples/: ecdh  schnorr
p256k1/: context.go  field.go  group.go  group_test.go  hash.go  pubkey.go  scalar.go  secp256k1.go  secp256k1_test.go
pkg/: context.go  ecmult.go  ecmult_test.go  field.go  field_mul.go  hash.go  secp256k1.go
signer/: btcec_signer.go  p256k1_signer.go  p256k1_signer_test.go  signer.go
signer/btcec/: go.mod
src/: field.h  field_impl.h  scalar.h  scalar_impl.h  util.h
